# wasmtime-component-async-test

./: .gitignore  .gitmodules
guest/: Cargo.toml  interface.wit
guest/src/: bindings.rs  lib.rs
host/: Cargo.toml  README.md  build.rs  config.toml
host/data/: bids.csv
host/src/: lib.rs  main.rs
