[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
# wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ec56282b", default-features = false, features = ["async"] }
# wit-bindgen-rt = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ec56282b", default-features = false, features = ["async"] }
# wit-bindgen-rust-macro = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ec56282b", default-features = false, features = ["async"] }
# wit-bindgen-rt = "0.41.0"
# wasi = "0.14.2"
# wasmtime-wit-bindgen = { path = "../wasip3-prototyping/crates/wit-bindgen" }
# wit-bindgen = "0.41.0"
# wit-bindgen-rt = "0.41.0"
wasi = "0.14.2"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "ec56282b", features = ["default"] }

[lib]
crate-type = ["cdylib"]
