[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "5708666", features = ["default"] }
tokio-util = { version = "0.7.14", default-features = false, features = ["codec"] }
tokio = { version = "1.34.0", default-features = false, features = ["io-util"] }
futures = { version = "0.3.31" }

[lib]
crate-type = ["cdylib"]
