[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { path = "../wasip3-prototyping/crates/wasmtime", features = ["component-model-async"] }
wasmtime-wasi = { path = "../wasip3-prototyping/crates/wasi", default-features = false, features = ["p3"] }

anyhow = "1.0.79"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "43556041" }
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "43556041" }
#wit-component = "0.227.1"
#wasmparser = "0.227.1"
