[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { path = "../wasip3-prototyping/crates/wasmtime", features = ["component-model-async"] }
wasmtime-wasi = { path = "../wasip3-prototyping/crates/wasi", default-features = false, features = ["p3"] }

anyhow = "1.0.79"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
wasmparser = { version = "0.228.0", git = "https://github.com/bytecodealliance/wasm-tools", rev = "ec621cf1" }
wit-component = { version = "0.228.0", git = "https://github.com/bytecodealliance/wasm-tools", rev = "ec621cf1" }
# wasmparser = { version = "0.228.0" }
# wit-component = { version = "0.228.0" }
# wasmtime = { path = "../wasip3-prototyping/crates/wasmtime", features = ["component-model-async", "reexport-wasmparser"] }
#wit-component = "0.227.1"
#https://github.com/bytecodealliance/wasm-tools#
#wasmparser = "0.227.1"

[patch.crates-io]
wasmparser = { version = "0.228.0", git = "https://github.com/bytecodealliance/wasm-tools", rev = "ec621cf1" }
